--- a/style.css
+++ b/style.css
@@ -16,7 +16,9 @@ body {
   height: 100vh;
   padding: 2rem;
 }
-
+.demo {
+  color: red;
+}
 nav {
   display: flex;
   justify-content: space-between;
